[gd_scene load_steps=3 format=3 uid="uid://cdg0b4vllc1p4"]

[ext_resource type="Script" path="res://script/interactables/g_billboard_text_component.gd" id="1_rvwln"]
[ext_resource type="FontFile" uid="uid://0ccti3hbp8kw" path="res://UI/ChevyRay - Lantern.ttf" id="2_nlube"]

[node name="GFloatingText" type="Node3D"]
script = ExtResource("1_rvwln")

[node name="CurrentText" type="Label3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
layers = 2
ignore_occlusion_culling = true
billboard = 1
texture_filter = 1
text = "TEXT"
font = ExtResource("2_nlube")
font_size = 34
autowrap_mode = 3
width = 600.0

[node name="TypewriteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.05

[node name="TimeoutTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0
